--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -8,7 +8,6 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/headers/">
 
 
-
         <!-- Bootstrap core CSS -->
     <link href="/docs/5.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -19,7 +18,7 @@
     <link rel="manifest" href="/docs/5.1/assets/img/favicons/manifest.json">
     <link rel="mask-icon" href="/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
     <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
-    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    <link rel="stylesheet" href="{% static 'css/all.css' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -33,19 +32,13 @@
       </a>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="{% url 'home' %}" class="nav-link px-2 link-dark">Home</a></li>
-        <li><a href="{% url 'dashboard' %}" class="nav-link px-2 link-dark">Dashboard</a></li>
+        <li><a href="{% url 'all' %}" class="nav-link px-2 link-dark">All</a></li>
         <li><a href="{% url 'kids' %}" class="nav-link px-2 link-dark">Kids</a></li>
         <li><a href="{% url 'products' %}" class="nav-link px-2 link-dark">Products</a></li>
         <li><a href="{% url 'sales' %}" class="nav-link px-2 link-dark">Sales</a></li>
         <li><a href="{% url 'about' %}" class="nav-link px-2 link-dark">About</a></li>
       </ul>
       <div class="col-md-3 text-end">
-          <a href="{% url 'cart' %}"><button type="button" class="btn btn-outline-primary me-2">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-              </svg>
-          </button></a>
           <a href="{% url 'login' %}"><button type="button" class="btn btn-outline-primary me-2">Login</button></a>
           <a href="{% url 'register' %}"><button type="button" class="btn btn-outline-primary me-2">Sign up</button></a>
       </div>
