--- a/main/templates/main/kids.html
+++ b/main/templates/main/kids.html
@@ -4,5 +4,22 @@ Orders
 {% endblock %}
 
 {% block content %}
-<h1>This is the orders</h1>
+{% load static %}
+
+<div class="grid-container" style="display: grid">
+    {%for cloth in clothes%}
+    <div class="grid-item">
+        <div class="card" style="width: 300px; margin: 0 20px;">
+            <div class="container" style="max-width: 300px;">
+                <img src="{{cloth.image}}" alt="New York" style="width:100%; height: 300px">
+                <div class="card-body">
+                    <h5 class="card-title">{{cloth.name}}({{cloth.gender}})</h5>
+                    <p class="card-text">Cost: ${{cloth.price}}</p>
+                    <a href="#" class="btn btn-primary">Add to cart</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
 {% endblock %}
