--- a/main/templates/main/sales.html
+++ b/main/templates/main/sales.html
@@ -4,5 +4,19 @@ Customer Page
 {% endblock %}
 
 {% block content %}
-<h1>This is the customer page</h1>
+{%for sale in sales %}
+    <div class="grid-item">
+        <div class="card" style="width: 300px; margin: 0 20px;">
+            <div class="container" style="max-width: 300px;">
+                <img src="{{sale.image}}" alt="New York" style="width:100%; height: 300px">
+                <div class="card-body">
+                    <h5 class="card-title">{{sale.name}}({{sale.gender}})</h5>
+                    <h2><del>{{sale.old_price}}$</del></h2>
+                    <p class="card-text">Cost: {{sale.new_price}}$</p>
+                    <a href="#" class="btn btn-primary">Add to cart</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
 {% endblock %}
