--- a/main/templates/main/CreateBoxes.html
+++ b/main/templates/main/CreateBoxes.html
@@ -1,7 +1,7 @@
 {% extends 'main/baseAdmin.html' %}
 {% load static %}
 {% block title %}
-Main Page
+Create new gift box
 {% endblock %}
 
 {% block content %}
